[feature] add QueryInstantiationBasicTest